# dmr

./: .gitignore  CMakeList.txt  CMakeLists.txt  LICENSE.md  README.md  fobos  makefile
cmake/: CMakeLists.src  CMakeLists.tests  CrayFortranCompiler.cmake  GNUFortranCompiler.cmake  IntelOneAPIFortranCompiler.cmake  NVFortranCompiler.cmake
src/lib/: CMakeLists.txt  dmr.F90  dmr_c_functions.F90  dmr_c_functions_c.c  dmr_correctly_mapped.F90  dmr_device_memcpy.F90  dmr_environment.F90  dmr_get_mapped_ptr.F90  dmr_target_alloc.F90  dmr_target_associate_ptr.F90  dmr_target_disassociate_ptr.F90  dmr_target_free.F90  dmr_target_init.F90  dmr_target_is_present.F90  dmr_target_memcpy.F90  dmr_target_memcpy_async.F90  dmr_target_memcpy_rect.F90  dmr_target_memcpy_rect_async.F90  dmr_target_memcpy_scalar.F90  falco.F90  falco_c_functions.F90  falco_c_functions_c.c  falco_environment.F90  prova.tar
src/lib/include/: alloc_fptr_dev.i90  dmr_correctly_mapped.i90  dmr_get_mapped_ptr.i90  dmr_target_alloc.i90  dmr_target_free.i90  dmr_target_is_present.i90  dmr_target_memcpy.i90  dmr_target_memcpy_rect.i90  falco_C.i90  falco_I.i90  falco_R.i90  free_fptr_dev.i90  get_mapped_ptr.i90  is_present.i90  memcpy.i90  memcpy_hd.i90  memcpy_rect.i90
src/lib/modules/: dmr.F90  dmr_environment.F90
src/lib/prova/: c_alloc.c  falco_mod.F90
src/lib/submodules/: dmr_correctly_mapped.F90  dmr_device_memcpy.F90  dmr_get_mapped_ptr.F90  dmr_target_alloc.F90  dmr_target_free.F90  dmr_target_init.F90  dmr_target_is_present.F90  dmr_target_memcpy.F90  dmr_target_memcpy_rect.F90  dmr_target_memcpy_scalar.F90
src/lib/submodules/include/: dmr_correctly_mapped.i90  dmr_correctly_mapped_f08.i90  dmr_target_alloc.i90
src/tests/: CMakeLists.txt  init_device_pointers.F90  matmul_device_pointers.F90  test_dmr.F90  test_dmr_c_functions.F90  test_dmr_target_alloc.F90  test_dmr_target_free.F90  test_dmr_target_is_present.F90  test_falco.F90  test_falco_c_functions.F90  test_omp_get.F90
src/tests/include/: init_rank_1.i90  init_rank_2.i90  matmul_rank_1.i90  matmul_rank_2.i90
src_generator/: generate_library.py  generate_sources.py  generate_tests.py
src_generator/lib/: dmr.jf90  dmr_device_memcpy.jf90  dmr_environment.jf90  dmr_get_mapped_ptr.jf90  dmr_target_alloc.jf90  dmr_target_associate_ptr.jf90  dmr_target_disassociate_ptr.jf90  dmr_target_free.jf90  dmr_target_init.jf90  dmr_target_is_present.jf90  dmr_target_memcpy.jf90  dmr_target_memcpy_async.jf90  dmr_target_memcpy_rect.jf90  dmr_target_memcpy_rect_async.jf90
src_generator/lib/modules/: dmr.jf90  dmr_environment.jf90  generate_modules.py
src_generator/lib/submodules/: dmr_correctly_mapped.jf90  dmr_device_memcpy.jf90  dmr_get_mapped_ptr.jf90  dmr_target_alloc.jf90  dmr_target_free.jf90  dmr_target_init.jf90  dmr_target_is_present.jf90  dmr_target_memcpy.jf90  dmr_target_memcpy_rect.jf90  dmr_target_memcpy_scalar.jf90  generate_submodules.py
src_generator/tests/: back.jf90  test_dmr_target_alloc.jf90  test_dmr_target_free.jf90  test_dmr_target_is_present.jf90
